# Murmur

./: .gitignore  CLAUDE.md  README.md  flake.nix  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci-deploy.yml
server/: Cargo.toml  Dockerfile  docker-compose.yml  server.db-shm  server.db-wal
server/src/: auth.rs  db.rs  main.rs
src/: App.tsx  commands.ts  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  crypto.rs  db.rs  lib.rs  relay.rs
src/backend/: backend.ts  crypto.ts  relay-client.ts  storage.ts
src/components/: BottomNav.tsx  ChatBubble.tsx  ComposeModal.tsx  Header.tsx  MessageInput.tsx  ReachOutModal.tsx
src/pages/: AddFriend.tsx  AnonThread.tsx  ChatThread.tsx  Chats.tsx  Feed.tsx  Friends.tsx  Me.tsx
