[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

rusqlite = { version = "0.31", features = ["bundled"] }
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8", "pem"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
chacha20poly1305 = "0.10"
once_cell = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
